# summarize_bot

./: .flaskenv  .pre-commit-config.yaml  .quartenv  Containerfile  README.md  app.py  build_container.sh  pyproject.toml
.github/workflows/: build.yml  test.yml
docker/: compose.e2e.yml
summarize_bot/: __init__.py  __main__.py  bart_summarize.py  config.py  decorators.py  log.py  pegasus_summarize.py  predictor.py  predictor_factory.py  router.py  summarize.py  t5_summarize.py
summarize_bot/tests/: conftest.py  test_summarize.py  testdata.py
